@@ -5,10 +5,12 @@ import application.Model.Coche;
 import application.Model.Multa;
 import application.Utils.AlertUtils;
 
+import java.time.LocalDate;
 import java.util.List;
 
 public class MultaCRUD implements MultaCRUDImpl {
     MultaDAO dao;
+    List<Multa> multas;
 
     public MultaCRUD() {
         dao = new MultaDAO();
@@ -21,14 +23,25 @@ public class MultaCRUD implements MultaCRUDImpl {
 
     @Override
     public List<Multa> getMultas(Coche coche) {
-        return dao.getMultas(coche);
+        multas = dao.getMultas(coche);
+        return multas;
     }
 
     @Override
     public boolean insertarMulta(List<String> campos) {
-        // if (comprobaciones(campos)) return false;
-        //Multa multa = new Multa(campos.get(0), campos.get(1), campos.get(2), )
-        return false;
+        String matricula = campos.getFirst();
+        double precio = Double.parseDouble(campos.get(1));
+        LocalDate localDate = LocalDate.parse(campos.getLast());
+
+        Multa multa = new Multa(matricula, precio, localDate);
+
+        if (multas.contains(multa)) {
+            AlertUtils.mostrarError("La multa ya esta en la bd.");
+            return false;
+        }
+
+        dao.insertarMulta(multa);
+        return true;
     }
 
     @Override
@@ -39,22 +52,5 @@ public class MultaCRUD implements MultaCRUDImpl {
     @Override
     public void eliminarMulta(Multa multa) {
 
-    }
-
-    public boolean comprobaciones(List<String> campos) {
-        // Función para comprobar todos si los campos pasan las comprobaciones.
-        return compruebaCampo(campos.get(0), "Matricula") ||
-                compruebaCampo(campos.get(1), "LocalDate") ||
-                compruebaCampo(campos.get(2), "Coche");
-    }
-
-    boolean compruebaCampo(String contenido, String campo) {
-        // En esta función comprobamos si el campo está vacio. Si lo está, mostramos un error.
-        boolean bool = false;
-        if (contenido.isEmpty()) {
-            AlertUtils.mostrarError("El campo " + campo + " está vacio");
-            bool = true;
-        }
-        return bool;
     }
 }
